@@ -9,8 +9,6 @@ the Doxygen-generated documentation in doc/schroot/html/todo.html
 PENDING
 -------
 
-* Update documentation schroot.conf examples.
-
 
 PLANNED
 -------
