@@ -14,6 +14,7 @@
 #description=Debian sid (unstable)
 #location=/srv/chroot/sid
 #priority=3
+#users=rleigh
 #groups=sbuild
 #root-groups=root
 #aliases=unstable,default
@@ -24,7 +25,9 @@
 ##location=/srv/chroot/sid
 #priority=3
 #groups=sbuild,root
+#root-users=rleigh
 #root-groups=root,sbuild
+#source-root-users=rleigh
 #device=/dev/hda_vg/sid_chroot
 #mount-options=-o atime,sync,user_xattr
 #lvm-snapshot-options=--size 2G
@@ -32,20 +35,27 @@
 #run-exec-scripts=true
 #
 #[etch]
-#description=Debian etch (testing)
+#description=Debian etch (testing) 32-bit
 #location=/srv/chroot/etch
 #priority=3
 #groups=sbuild-security
 #aliases=testing
 #run-setup-scripts=false
 #run-exec-scripts=false
+#personality=linux32
 #
 #[sarge]
 #description=Debian sarge (stable)
 #location=/srv/chroot/sarge
 #priority=2
 #groups=sbuild
-#aliases=stable,stable-security
+#aliases=stable
+#
+#[sarge-file]
+#description=Debian sarge (stable)
+#file=/srv/chroot/sarge.tar.gz
+#priority=2
+#groups=sbuild
 #
 #[sarge-secure]
 #description=Debian sarge (stable)
@@ -63,5 +73,6 @@
 #aliases=unstable,default
 #device=/dev/hda_vg/experimental_chroot
 #mount-options=-o atime,sync,user_xattr
+#location=/experimental
 #run-setup-scripts=true
 #run-exec-scripts=true
